Stops h2 from overflowing

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -28,7 +28,6 @@
                 margin-top: -12%;
                 z-index: 565656;
                 margin-left: 15vw;
-                width: 100%;
                 width: fit-content;
             @media screen and (min-width:$xxxs){
                 margin-top: -9%;
